Fix alignment and size of card items

--- a/src/order_card/card_body/cardBody.module.css
+++ b/src/order_card/card_body/cardBody.module.css
@@ -12,12 +12,14 @@
 .yearPrice {
   color: gray;
   margin: 0;
+  font-size: 13px
 }
 
 .annualPlanChangeLink {
   color: rgb(56, 42, 255);
   font-weight: bold;
   text-decoration: underline;
+  font-size: 13px;
 }
 
 .annualPlanChangeLink:hover {
@@ -43,12 +45,22 @@
 }
 
 .annualPlanCardImage {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border: 1px solid transparent;
   border-radius: 25px;
 }
 
 .annualPlanHeaderAndPrice {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   margin: 10px;
+}
+
+.annualPlanStyle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
